--- a/styles/main.css
+++ b/styles/main.css
@@ -7,10 +7,23 @@ h1 {
 }
 
 nav ul {
-  list-style-type: none;
+    list-style-type: none;
+    padding: 0;
+    margin: 20px 0;
+    text-align: center;
 }
 
 nav ul li {
-  display: inline;
-  margin-right: 10px;
+    display: inline;
+    margin: 0 15px;
+}
+
+nav ul li a {
+    text-decoration: none;
+    color: #333;
+    font-weight: bold;
+}
+
+nav ul li a:hover {
+    color: #007BFF;
 }
